feat: add a virtual board
so you can test recording